sumo/tests/marouter/errors/format/vm/vm_false21/errors.marouter
Error: Not numeric vehicle number in line 'a          0'.
Quitting (on error).
